.has-sidebar .entry-content max-width in a media query to fix terms & conditions being larger than screen width on small screens

--- a/src/scss/components/biomes/_layout--global.scss
+++ b/src/scss/components/biomes/_layout--global.scss
@@ -141,7 +141,9 @@ $sidebar-width: 280px;
 		grid-row-gap: 1rem;
 
 		.entry-content {
-			max-width: 60rem;
+			@media (min-width: get-breakpoint(sm)) {
+				max-width: 60rem;
+			}
 		}
 
 		.content-container {
